# BAMB2024

./: .gitignore  README.md
1-modeling_101/: README.md  dataset_tutorial1.csv  tutorial_1A.ipynb  tutorial_1A_solution.ipynb  tutorial_1B.ipynb  tutorial_1B_solution.ipynb  tutorial_1C.ipynb  tutorial_1C_solution.ipynb
3-reinforcement_learning/: .gitignore  README.md  pyproject.toml
3-reinforcement_learning/3A_RL-basics/: agents.py  archive_2023.ipynb  code_issue.txt  environments.py  plotting.py  tutorial_3a.ipynb  workbench.ipynb
Day 3: Bayes Tutorials/: Bayes_Tutorial_Part1_Instructions.ipynb  Bayes_Tutorial_Part1_Solutions.ipynb  Bayes_Tutorial_Part2_Instructions.ipynb  README.md  SBI_Fitting_mixed_behaviora_data.ipynb
Day 4: Latent variable models/: README.md  hidden-markov-models.ipynb  hidden-markov-models_solutions.ipynb  hmm_library.py  mixture-models-EM.ipynb  mixture-models-EM_solutions.ipynb
Day 6: Neural Networks/: README.md  data.py  ops.py  tutorial_4_RNNs-instructions.ipynb  tutorial_4_RNNs-solutions.ipynb  tutorial_4_models-instructions.ipynb  tutorial_4_models-solutions.ipynb
datasets/: README.md
day2_reinforcement_learning/: .gitignore  README.md  pyproject.toml
day2_reinforcement_learning/part1_rl_basics/: README.md  agents.py  environments.py  plotting.py  simulate.py  tutorial_2a.ipynb
day2_reinforcement_learning/part2_fitting_rl_models/: README.md  RL_library.py  models.py  tutorial_2B_RL_instructions.ipynb  tutorial_2B_RL_solutions.ipynb
day5_ddm/: bamb_tutorial5_ddm.ipynb  bamb_tutorial5_ddm_solutions.ipynb
(+16 files in other folders)
